force-app/main/default/objects/LeaseFinancePolicy__mdt/LeaseFinancePolicy__mdt.object-meta.xml
<CustomObject>
    <label>LeaseFinancePolicy</label>
    <pluralLabel>LeaseFinancePolicies</pluralLabel>
</CustomObject>