force-app/main/default/objects/LeaseFinancePolicy__mdt/fields/AllowZeroRent__c.field-meta.xml
<CustomField>
    <fullName>AllowZeroRent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AllowZeroRent</label>
    <type>Checkbox</type>
</CustomField>