force-app/main/default/objects/LeaseFinancePolicy__mdt/fields/MaxDepositMonths__c.field-meta.xml
<CustomField>
    <fullName>MaxDepositMonths__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MaxDepositMonths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>