force-app/main/default/objects/LeaseFinancePolicy__mdt/fields/MaxMonthlyRent__c.field-meta.xml
<CustomField>
    <fullName>MaxMonthlyRent__c</fullName>
    <defaultValue>9999999</defaultValue>
    <label>MaxMonthlyRent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>