force-app/main/default/objects/LeaseFinancePolicy__mdt/fields/MinDepositMonths__c.field-meta.xml
<CustomField>
    <fullName>MinDepositMonths__c</fullName>
    <defaultValue>0</defaultValue>
    <label>MinDepositMonths</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>