force-app/main/default/objects/LeaseFinancePolicy__mdt/fields/MinMonthlyRent__c.field-meta.xml
<CustomField>
    <fullName>MinMonthlyRent__c</fullName>
    <label>MinMonthlyRent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>