force-app/main/default/objects/LeaseFinancePolicy__mdt/fields/RequireDeposit__c.field-meta.xml
<CustomField>
    <fullName>RequireDeposit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RequireDeposit</label>
    <type>Checkbox</type>
</CustomField>